website: Fix modal width on mobile.

--- a/apps/website/src/components/ui/Modal/Modal.module.scss
+++ b/apps/website/src/components/ui/Modal/Modal.module.scss
@@ -20,7 +20,8 @@
   background: #161625;
   backdrop-filter: blur(45px);
   
-  width: 512px;
+  max-width: 512px;
+  width: 100%;
   height: 342px;
 
   padding: 20px;
